# DiscountTracer

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
dlls/: CMakeLists.txt  lamoda.cpp  lamoda.h
testcfg/: config.json
